<resources>
    <string name="app_name">Ma Pharmacie</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Pharmacies</string>
    <string name="my_orders">Orders</string>
    <string name="Gmail_web_client_id">467496904796-qnkcblf9s7tia25bmrgp50ed9a0uqfnf.apps.googleusercontent.com</string>

    <string-array name="productstypes">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meats</item>
        <item>Testings</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_category">Add new Category</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="add_new_medicine">Add new medicine</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_price_in_dollars">Enter Price in FCFA</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="select_any_category">Select any Category</string>
    <string name="add_product">Add Product</string>
    <string name="categories">Categories</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_product">Edit product</string>
    <string name="edit_and_save">Edit and Save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_link">Send Link</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="signup_as_pharmacy_owner">Signup as Pharmacy Owner</string>
    <string name="signup_to_browse_pharmacies">Signup to Browse Pharmacies</string>
    <string name="about">About</string>
    <string name="all_medicines">All Medicines</string>
    <string name="whatsapp_us">WhatsApp Us</string>
    <string name="visit">Visit</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="enter_whatsapp_number">Enter WhatsApp number</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="bank_details">Bank Details</string>
    <string name="payment">Payment</string>
    <string name="account_holder_testing_user">Account Holder: Testing User</string>
    <string name="bank_name_testing_bank">Bank Name : Testing Bank</string>
    <string name="iban_de2032123456789">IBAN : DE2032123456789</string>
    <string name="bic_deu098765">BIC: DEU098765</string>
    <string name="upload_image_proof">Upload Image Proof</string>
    <string name="select_image">Select Image</string>
    <string name="pay_now">Pay Now</string>
    <string name="find_pharmacies_fast">Find Pharmacies Fast!</string>
    <string name="please_wait">Please Wait</string>
    <string name="search_medicines">Search medicines</string>
    <string name="find_the_right_medicine">Find the Right Medicine</string>
    <string name="add_new_product">Add New Product</string>
    <string name="search_by_pharmacy_name">Search by pharmacy name</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="pay_manually">Pay Manually</string>
    <string name="rate_this_pharmacy">Rate this Pharmacy</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>

    <string name="access_a_complete_medicine_database">Access a Complete Medicine Database</string>
    <string name="browse_and_manage_medicines_easily">Browse and Manage Medicines Easily</string>
    <string name="find_the_right_medicine_with_detailed_information">Find the right medicine with detailed information.</string>
    <string name="support_medical_content">Support Medical Content</string>
    <string name="help_keep_medical_data_updated_and_accessible_for_everyone">Help keep medical data updated and accessible for everyone.</string>
    <string name="choose_your_subscription_plan">Choose Your Subscription Plan</string>
    <string name="annual_plan">Annual Plan</string>
    <string name="_130_year">CFA 130/year</string>
    <string name="unlimited_access_to_all_medicines_and_updates">Unlimited access to all medicines and updates.</string>
    <string name="_6_months_plan">6 Months Plan</string>
    <string name="flexible_plan_for_6_months_renew_for_another_6_month_after_the_end_of_the_period_for_50">Flexible plan for 6 months. Renew for another 6 month after the end of the period for €50.</string>
    <string name="commitment_free_and_flexibility_with_a_monthly_plan_renew_again_for_another_3_months_for_60">Commitment free and flexibility with a monthly plan. Renew again for another 3 months for €60.</string>
    <string name="best">Best</string>
    <string name="_3_months_plan">3 Months Plan</string>
    <string name="cancel_any_time">Cancel Any Time</string>
    <string name="we_prioritize_your_security_enjoy_a_seamless_and_secure_payment_process">We prioritize your security. Enjoy a seamless and secure payment process.</string>
    <string name="start_browsing_medicines">Start Browsing Medicines</string>
    <string name="get_address">Get Address</string>
    <string name="enter_location">Enter Location</string>
    <string name="write_something_about_pharmacy">Write something about pharmacy</string>
    <string name="enter_price_in_FCFA">Enter Price in FCFA</string>
    <string name="enter_price_in_GNF">Enter Price in GNF</string>
    <string name="price_in_gnf">Price in GNF</string>
    <string name="pharmacy_status">Pharmacy Status</string>
    <string name="status_updated_to">"Status updated to: "</string>
    <string name="failed_to_update_status">Failed to update status</string>
    <string name="status">Status</string>

</resources>