<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <!--         <item-->
        <!--            android:id="@+id/favourites"-->
        <!--            android:icon="@drawable/ic_baseline_favorite_24"-->
        <!--            android:title="@string/favorites" />-->
        <item
            android:id="@+id/Cart"
            android:icon="@drawable/categories"
            android:title="@string/cart" />
           <item
            android:id="@+id/Profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />

    </group>

</menu>