<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddCatogry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:onClick="backPress"
                android:src="@drawable/baseline_arrow_back_ios_new_24"

                android:tint="@color/app_color" />

            <TextView
                android:id="@+id/PageTitle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="67dp"
                android:fontFamily="@font/lexend_semi_bold"
                android:gravity="left"

                android:text="@string/add_new_medicine"
                android:textColor="@color/app_color"
                android:textSize="22dp" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/CatogryImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"

            android:src="@drawable/defualt_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseCatogryImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/black"
            android:backgroundTint="#E3AA27"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_product_name"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/enter_description"
            android:minHeight="@dimen/_120sdp"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_price_in_FCFA"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="12dp"

            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextPriceGNF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_price_in_GNF"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextAvailableAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_quantity"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/select_any_category"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnAddCatogry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_product"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>