<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddCatogry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="29dp"
                android:onClick="backPress"

                android:src="@drawable/baseline_arrow_back_ios_new_24" />

            <TextView
                android:id="@+id/PageTitle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/lexend_semi_bold"
                android:gravity="left"
                android:text="@string/edit_product"
                android:textColor="#000"
                android:textSize="30dp" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/imgProductEdit"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60sdp"

            android:src="@drawable/defualt_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseImgEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/choose_image"
            android:textAllCaps="false"

            android:background="@color/black"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextProductNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_product_name"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextProductExpireEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/enter_description"
            android:minHeight="@dimen/_120sdp"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextProductPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_price_in_dollars"
            android:padding="12dp"
            android:inputType="numberDecimal"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextPriceGNF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_price_in_GNF"
            android:padding="12dp"
            android:inputType="numberDecimal"

            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />


        <EditText
            android:id="@+id/editTextProductNumberEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_quantity"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProductExpireLayout" />


        <Button
            android:id="@+id/btnAddEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/edit_and_save"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>
