<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddCatogry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:onClick="backPress"
            android:src="@drawable/baseline_arrow_back_ios_new_24"

            android:tint="@color/app_color" />

        <TextView
            android:id="@+id/PageTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="67dp"
            android:fontFamily="@font/lexend_semi_bold"
            android:gravity="left"

            android:text="@string/add_new_category"
            android:textColor="@color/app_color"
            android:textSize="22dp" />


    </RelativeLayout>


    <ImageView
        android:id="@+id/CatogryImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"

        android:src="@drawable/defualt_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChooseCatogryImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAllCaps="false"
        android:text="@string/choose_image"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="#E3AA27"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCatogryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_category_name"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnAddCatogry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/add_category"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>